@@ -55,6 +55,12 @@
             <!-- characters go here -->
             <div class="flex-row characters">
                 <a>
+                    <img class="character-img stars6" src="images/characters/icon/Spathodea_Icon.png">
+                    <div class="character-name">Spathodea</div>
+                    <img class="character-afflatus position-absolute" src="images/afflatuses/Beast_Banner.webp">
+                    <div class="character-portray position-absolute _3073"></div>
+                </a>
+                <a>
                     <img class="character-img stars6" src="images/characters/icon/6_Icon.png">
                     <div class="character-name">6</div>
                     <img class="character-afflatus position-absolute" src="images/afflatuses/Intelligence_Banner.webp">
@@ -169,6 +175,12 @@
                     <div class="character-portray position-absolute _3003"></div>
                 </a>
                 <!-- 5* start -->
+                <a>
+                    <img class="character-img stars5" src="images/characters/icon/Ulu_Icon.png">
+                    <div class="character-name">Ulu</div>
+                    <img class="character-afflatus position-absolute" src="images/afflatuses/Mineral_Banner.webp">
+                    <div class="character-portray position-absolute _3076"></div>
+                </a>
                 <a>
                     <img class="character-img stars5" src="images/characters/icon/Kanjira_Icon.png">
                     <div class="character-name">Kanjira</div>
