@@ -229,6 +229,10 @@
                     <div>Sotheby</div>
                 </div>
                 <div class="card">
+                    <img class="character-img" src="images/characters/icon/Spathodea_Icon.png">
+                    <div>Spathodea</div>
+                </div>
+                <div class="card">
                     <img class="character-img" src="images/characters/icon/Sputnik_Icon.png">
                     <div>Sputnik</div>
                 </div>
@@ -255,6 +259,10 @@
                 <div class="card">
                     <img class="character-img" src="images/characters/icon/Twins_Sleep_Icon.png">
                     <div>Twins Sleep</div>
+                </div>
+                <div class="card">
+                    <img class="character-img" src="images/characters/icon/Ulu_Icon.png">
+                    <div>Ulu</div>
                 </div>
                 <div class="card">
                     <img class="character-img" src="images/characters/icon/Voyager_Icon.png">
