@@ -28,6 +28,9 @@
                 <button>Limited time</button>
             </div>
             <div class="flex banners-wrapper">
+                <div class="火花雀儿 banner-button">
+                    <img src="images/banners/The_Chirps_of_Flame_Banner.webp">
+                </div>
                 <div class="涌流无止之物-2024-04-09 banner-button">
                     <img src="images/banners/The_Ever-Flowing_Banner.webp">
                 </div>
